# Cargo.toml - Configuration file for the SSG Metadata (Shokunin Static Site Generator Metadata)
# Copyright © 2024 Shokunin Static Site Generator. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
# Metadata about the package.
authors.workspace = true
build = "build.rs"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The name of the crate, used by Cargo to identify the project.
name = "ssg-metadata"
version = "0.0.1"

# A short description of the project. This is displayed on package registries like crates.io.
description = "Metadata extraction and processing for the Shokunin Static Site Generator"

# The path to the README file for the project. Cargo will include this file in the package.
readme = "README.md"

[dependencies]
# Dependencies required for building and running the project.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
yaml-rust2 = "0.8"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
quick-xml = "0.36"

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.

[lib]
name = "ssg_metadata"
path = "src/lib.rs"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
