# Cargo.toml - Configuration file for the SSG Sitemap (Shokunin Static Site Generator Sitemap)
# Copyright © 2024 Shokunin Static Site Generator. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
# Metadata about the package.
authors.workspace = true
build = "build.rs"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# The name of the crate, used by Cargo to identify the project.
name = "ssg-sitemap"
version = "0.0.1"
# A short description of the project. This is displayed on package registries like crates.io.
description = "Sitemap generation for the Shokunin Static Site Generator"
# The path to the README file for the project. Cargo will include this file in the package.
readme = "README.md"

[dependencies]
# Dependencies required for building and running the project.
dtt = "0.0.8"
regex = "1.10"
thiserror = "1.0"
url = "2.2"
xml-rs = "0.8"

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.

[lib]
name = "ssg_sitemap"
path = "src/lib.rs"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
pretty_assertions = "1.0"
