[package]
name = "ssg-template"
version = "0.0.1"
edition = "2021"
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
description = "A flexible templating engine for static site generators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastienrousseau/shokunin"
documentation = "https://docs.rs/ssg-template"
readme = "README.md"
keywords = ["template", "rendering", "static-site", "ssg", "shokunin"]
categories = ["template-engine", "web-programming"]

[dependencies]
regex = "1.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "1.0"

# [dev-dependencies]
# criterion = "0.5"

# [[bench]]
# name = "rendering_benchmark"
# harness = false
