# Cargo.toml - Configuration file for the SSG Template (Shokunin Static Site Generator Template Library)
# Copyright © 2024 Shokunin Static Site Generator. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
# Metadata about the package.
authors.workspace = true # Authors are defined in the workspace.
build = "build.rs" # The build script is defined in the workspace.
edition.workspace = true # The edition is defined in the workspace.
exclude.workspace = true # Files to exclude are defined in the workspace.
homepage.workspace = true # The homepage URL is defined in the workspace.
license.workspace = true # The license is defined in the workspace.
repository.workspace = true # The repository URL is defined in the workspace.
rust-version.workspace = true # The Rust version is defined in the workspace.
# version.workspace = true # The version is defined in the workspace.

# The name of the crate, used by Cargo to identify the project.
name = "ssg-template"

version = "0.0.1"

# A short description of the project. This is displayed on package registries like crates.io.
description = "A flexible templating engine for static site generators"

# The path to the README file for the project. Cargo will include this file in the package.
readme = "README.md"

[dependencies]
# Dependencies required for building and running the project.

# regex is used for regular expression support in the template engine.
regex = "1.5"

# reqwest is a popular HTTP client for Rust, used for handling remote template fetching.
# The `blocking` feature allows synchronous HTTP requests.
reqwest = { version = "0.12", features = ["blocking"] }

# serde is used for serializing and deserializing data structures, including JSON.
# The `derive` feature simplifies the process of creating serializable and deserializable structs.
serde = { version = "1.0", features = ["derive"] }

# serde_json is used for working with JSON data, which might be a common format for template context data.
serde_json = "1.0"

# tempfile is used to create temporary files and directories, which may be needed for template generation.
tempfile = "3.12"

# thiserror is used for handling errors in a simple and clear way, especially for custom error types.
thiserror = "1.0"

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.

# The library file that contains the main logic for the binary.
[lib]
name = "ssg_template"
path = "src/lib.rs"

# Optional benchmarking dependencies (commented out for now).
# [dev-dependencies]
# criterion = "0.5"

# Benchmarks (commented out for now).
# [[bench]]
# name = "rendering_benchmark"
# harness = false
