[package]
name = "ssg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Content-First Open Source Static Site Generator (SSG) written in Rust."
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0"
clap = "4.5"
comrak = "0.28"
dtt = "0.0.8"
env_logger = "0.11"
lazy_static = "1.5"
log = { version = "0.4", features = ["std"] }
minify-html = "0.15"
pulldown-cmark = "0.12"
quick-xml = "0.36"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rlg = "0.0.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
toml = "0.8"
yaml-rust2 = "0.8.1"
uuid = { version = "1.10", features = ["v4"] }
vrd = "0.0.8"

ssg-core = { path = "../ssg-core", version = "0.0.1" }
ssg-cli = { path = "../ssg-cli", version = "0.0.1" }
ssg-frontmatter = { path = "../ssg-frontmatter", version = "0.0.1" }
ssg-html = { path = "../ssg-html", version = "0.0.1" }
ssg-server = { path = "../ssg-server", version = "0.0.1" }

# Unix platforms use OpenSSL for now to provide SSL functionality
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.

[dev-dependencies]
# Dev dependencies are only used for testing and development.
assert_cmd = "2.0"
criterion = "0.5"

[lib]
name = "ssg"
path = "src/lib.rs"

[[bin]]
name = "ssg"
path = "src/main.rs"

