[package]
name = "ssg-wasm"
version = "0.0.37"
edition = "2021"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for ssg-core — run SSG in the browser or at the edge."
repository = "https://github.com/sebastienrousseau/static-site-generator"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ssg-core = { path = "../ssg-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
